--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     show-sql: true
-    url: jdbc:mysql://127.0.0.1:3306/kknq?useUnicode=true&characterEncoding=utf-80
+    url: jdbc:mysql://127.0.0.1:3306/kknq?useUnicode=true&characterEncoding=utf-8
     user: root
     password: 626520
   jpa:
