--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8080
   #url前缀，访问项目时在8080后加/kknq
-  context-path: /kknq
+  context-path:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
@@ -15,3 +15,8 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
+  thymeleaf:
+    encoding: UTF-8
+    mode: HTML5
+    content-type: text/html
+    cache: false
