--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8080
+server.context-path=/kknq
 
+spring.jpa.database=MySQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kknq?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=626520
+
+spring.mail.username=1915029771@qq.com
+spring.mail.password=gkhofzbqxgejbaff
+spring.mail.defaultEncoding=UTF-8
+spring.mail.host=smtp.qq.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
