--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kknq?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=626520
+spring.datasource.password=root
 
 spring.mail.username=1915029771@qq.com
 spring.mail.password=gkhofzbqxgejbaff
