修复展示页面bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.thymeleaf.mode = LEGACYHTML5
+spring.thymeleaf.cache=false
